	  can be identified when the reply comes back.

	  Affected files lib/silcclient/command.[ch],
	  lib/silcclient/client.c and lib/silcclient/idlist.[ch].

	* Added `sender' argument to silc_server_packet_send_to_channel
	  to indicaet the sender who originally sent the packet to us
	  that we are now re-sending.  Ignored if NULL.  Affected file
	  silcd/packet_send.[ch].

Thu Feb  1 23:31:21 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed channel ID decoding in server's JOIN command reply in
	  silcd/command_reply.c

	* Fixed braodcasting of replace ID payload to not to send it if
	  we are standalone server in silcd/packet_receive.c.

	* Fixed all channel message sending routines to not to send
	  packets to clients that has router set, since they are routed
	  separately in the same function earlier.  Affects file
	  silcd/packet_send.c and all channel packet sending functions.

        * In USERS reply, res_argv[i] are not allocated, the table
          is allocated.  Thus changed that free the table, not its
          internals.

	* In server's whois_check and identify_check if the client is
	  locally connected do not send any WHOIS commands - they are not
	  needed.

Thu Feb  1 21:32:27 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed some minor bugs in client when sending WHOIS command.  The
	  arguments was in wrong order.

	* Removed statis function add_to_channel from server in 
	  silcd/command.c that was previously used with the joining but
	  is obsolete now.

	* Tested USERS command in router environment successfully with two
	  routers, two servers and two clients.

Thu Feb  1 00:54:26 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Reorganized the USERS command and command reply in client library
	  in lib/silcclient/command.c and lib/silcclient/command_reply.c.
	  When the command is given by user we register a pending command
	  callback that will reprocess the command after the reply has been